[gd_scene load_steps=8 format=3 uid="uid://cv684hxs1nbne"]

[ext_resource type="Script" path="res://game.gd" id="1_ay16j"]
[ext_resource type="PackedScene" uid="uid://btjc0rsbsg0tf" path="res://player.tscn" id="1_ijqru"]
[ext_resource type="PackedScene" uid="uid://77hrwev3kntb" path="res://pine_tree.tscn" id="2_gw60e"]
[ext_resource type="Texture2D" uid="uid://bo67di3ks85ca" path="res://Lights/light.png" id="4_g1q1l"]
[ext_resource type="Script" path="res://DayNight.gd" id="5_2do2t"]

[sub_resource type="Curve2D" id="Curve2D_7reok"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -52, -121, 0, 0, 0, 0, 2031, -119, 0, 0, 0, 0, 2033, 1176, 0, 0, 0, 0, -56, 1173, 0, 0, 0, 0, -54, -121)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_pw2xc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -116, -61, 0, 0, 0, 0, 2219, -60)
}
point_count = 2

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ay16j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1942.0
offset_bottom = 1103.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_7reok")

[node name="SpawnPathFollow" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-52, -121)
rotation = 0.000960153

[node name="Player" parent="." instance=ExtResource("1_ijqru")]
position = Vector2(577, 731)

[node name="PineTree2" parent="." instance=ExtResource("2_gw60e")]
position = Vector2(1302, 276)

[node name="PineTree" parent="." instance=ExtResource("2_gw60e")]
position = Vector2(1257, 338)

[node name="PineTree3" parent="." instance=ExtResource("2_gw60e")]
position = Vector2(1341, 363)

[node name="PineTree4" parent="." instance=ExtResource("2_gw60e")]
position = Vector2(439, 701)

[node name="PineTree5" parent="." instance=ExtResource("2_gw60e")]
position = Vector2(1373, 829)

[node name="PineTree6" parent="." instance=ExtResource("2_gw60e")]
position = Vector2(348, 370)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.031
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.615686)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 102
text = "Game Over"

[node name="DayNight" type="CanvasModulate" parent="."]
color = Color(0.443137, 0.556863, 0.831373, 1)
script = ExtResource("5_2do2t")

[node name="Sun" type="PointLight2D" parent="DayNight"]
unique_name_in_owner = true
color = Color(1, 0.556863, 0, 1)
energy = 0.75
shadow_enabled = true
texture = ExtResource("4_g1q1l")
offset = Vector2(500, -200)
texture_scale = 5.0

[node name="SunPath" type="Path2D" parent="DayNight"]
curve = SubResource("Curve2D_pw2xc")

[node name="SunPathFollow" type="PathFollow2D" parent="DayNight/SunPath"]
unique_name_in_owner = true
position = Vector2(-116, -61)
rotation = 0.000428266

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
